<resources>
    <string name="app_name">My rain</string>
    <string name="txt_temperature">5°C</string>
    <string name="Celsius">°C</string>
    <string name="city">City</string>
    <string name="todo">TODO</string>
    <string name="enter_city">Enter city</string>
    <string name="moscow">Moscow</string>
    <string name="st_petersburg">St. Petersburg</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="krasnodar">Krasnodar</string>
    <string name="wind_speed">Wind speed</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="Theme">Theme:</string>
    <string name="english">English</string>
    <string name="Russian">Русский</string>
    <string name="language">Language:</string>
    <string name="settings">Settings</string>
    <string name="city_change">City change</string>
    <string name="changeCity">change</string>
    <string name="save">Save</string>
    <string name="back">back</string>
    <string name="browser">Browser</string>

    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="saveChange">Save change?</string>

    <string name="disconnect">not found</string>
    <string name="use_temperature_sensor">Use temperature sensor</string>
    <string name="use_humidity_sensor">Use humidity sensor</string>
    <string name="sql" translatable="false">sql</string>
    <string name="use_geo">Use geo</string>

</resources>
