<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="40sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButton_light"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_Theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Theme"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButton_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButton_english"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radioButton_Russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Russian" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/checkBox_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atmospheric_pressure" />

        <CheckBox
            android:id="@+id/checkBox_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed" />
    </LinearLayout>
</LinearLayout>